import { EventInviteStatus, ShiftInviteStatus } from '@repo/data';
import type { ShiftVolunteeringDisplayState } from '@repo/ui';

/** Shared invite-status values for shift + event (identical GraphQL enums). */
export type InviteStatus = ShiftInviteStatus | EventInviteStatus;

const ADMIN_UNINVITE_SOURCE_STATUS_VALUES = new Set<string>([
  ShiftInviteStatus.AdminInvited,
  ShiftInviteStatus.AwaitingAdminApproval,
  ShiftInviteStatus.WaitlistJoined,
  ShiftInviteStatus.Joined,
]);

/** Whether an admin can remove a volunteer (→ ADMIN_REJECTED). */
export function canAdminUninvite(status: InviteStatus): boolean {
  return ADMIN_UNINVITE_SOURCE_STATUS_VALUES.has(status);
}

/** Target status when an admin removes a volunteer. */
export function adminUninviteTargetStatus<S extends InviteStatus>(
  status: S,
): S | null {
  if (!canAdminUninvite(status)) {
    return null;
  }
  return ShiftInviteStatus.AdminRejected as S;
}

/** Whether an admin can re-invite a previously rejected volunteer (→ ADMIN_INVITED). */
export function canAdminReinvite(status: InviteStatus): boolean {
  return (
    status === ShiftInviteStatus.AdminRejected ||
    status === EventInviteStatus.AdminRejected
  );
}

/** Target status when an admin re-invites a rejected volunteer. */
export function adminReinviteTargetStatus<S extends InviteStatus>(
  status: S,
): S | null {
  if (!canAdminReinvite(status)) {
    return null;
  }
  return ShiftInviteStatus.AdminInvited as S;
}

/**
 * Invite-sheet defaults: keep ADMIN_REJECTED off the Invited column so saving
 * the sheet (e.g. to add someone else) does not silently re-invite them.
 * Admins re-add them explicitly from Available.
 */
export function preselectedInviteMemberIds(
  members: ReadonlyArray<{ id: string; inviteStatus?: InviteStatus | null }>,
): string[] {
  return members
    .filter(
      (member) =>
        member.inviteStatus == null || !canAdminReinvite(member.inviteStatus),
    )
    .map((member) => member.id);
}

/** Domain invite status → backoffice display state (VOLI-842 / invite-status-model). */
export function toInviteDisplayState(
  status: InviteStatus,
): ShiftVolunteeringDisplayState {
  switch (status) {
    case ShiftInviteStatus.AdminInvited:
    case EventInviteStatus.AdminInvited:
      return 'invited';
    case ShiftInviteStatus.AwaitingAdminApproval:
    case EventInviteStatus.AwaitingAdminApproval:
      return 'requested';
    case ShiftInviteStatus.WaitlistJoined:
    case EventInviteStatus.WaitlistJoined:
      return 'requested';
    case ShiftInviteStatus.Joined:
    case EventInviteStatus.Joined:
      return 'accepted';
    case ShiftInviteStatus.VolunteerRejected:
    case EventInviteStatus.VolunteerRejected:
      return 'declined';
    case ShiftInviteStatus.VolunteerCancelled:
    case EventInviteStatus.VolunteerCancelled:
      return 'cancelled';
    case ShiftInviteStatus.AdminRejected:
    case EventInviteStatus.AdminRejected:
      return 'rejected';
    default: {
      const _exhaustive: never = status;
      return _exhaustive;
    }
  }
}

export type InviteStatusCounts = {
  invited: number;
  accepted: number;
  signedUp: number;
  declined: number;
  cancelled: number;
  rejected: number;
};

export function countInviteDisplayStates(
  statuses: readonly InviteStatus[],
): InviteStatusCounts {
  const counts: InviteStatusCounts = {
    invited: 0,
    accepted: 0,
    signedUp: 0,
    declined: 0,
    cancelled: 0,
    rejected: 0,
  };

  for (const status of statuses) {
    switch (toInviteDisplayState(status)) {
      case 'invited':
        counts.invited += 1;
        break;
      case 'accepted':
        counts.accepted += 1;
        break;
      case 'signed_up':
        counts.signedUp += 1;
        break;
      case 'declined':
        counts.declined += 1;
        break;
      case 'cancelled':
        counts.cancelled += 1;
        break;
      case 'rejected':
        counts.rejected += 1;
        break;
      case 'requested':
        // Count approval/waitlist under invited column for summary until UI splits
        counts.invited += 1;
        break;
      default:
        break;
    }
  }

  return counts;
}

/** Summary line for instance detail, e.g. "4 invited · 2 accepted · 1 signed up · 12 spots". */
export function formatInviteStatusSummary(
  counts: InviteStatusCounts,
  spots: number | null | undefined,
  labels: {
    invited: string;
    accepted: string;
    signedUp: string;
    spots: string;
  },
): string {
  const parts = [
    `${counts.invited} ${labels.invited}`,
    `${counts.accepted} ${labels.accepted}`,
    `${counts.signedUp} ${labels.signedUp}`,
  ];
  if (spots != null) {
    parts.push(`${spots} ${labels.spots}`);
  }
  return parts.join(' · ');
}
